--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!mjones-interview.qmd"
+    - "!ai-series-5.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,7 +43,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
-    - "!what-is-data-science.qmd"
+    - "!ai-series-5.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2024/03/21/mjones-interview.qmd">
+<a href="/ideas/posts/2024/05/28/ai-series-5.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Data science and AI in financial services: An interview with Nationwide's Matthew Jones
-Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services. Interview by Jonathan Gillard, professor of statistics and data science, Cardiff University.   
+## AI series: Meeting the unprecedented challenges AI poses in the labour market
+Expanding the deployment of Artificial Intelligence (AI) across various sectors has been widely touted as a significant threat to jobs but so far data to justify these fears or guide a response to them has been lacking. Julia Lane, Lesley Hirsch, and Adam Leonard look at an approach piloted in the US that may offer some insights.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2024/03/21/images/mjones-laptop.png)
+![](ideas/posts/2024/05/28/images/Industry-of-ideas991-724.png)
 :::
 :::
 
