Nowcasting data science bite
Article and images added and index updated

--- a/index.qmd
+++ b/index.qmd
@@ -133,15 +133,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/posts/2024/06/11/ai-series-7.qmd">
+<a href="/ideas/datasciencebites/posts/2024/6/25/nowcasting-3step.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## AI series: Ensuring new AI technologies help everyone thrive 
-Anna Demming looks at how our handling of these AI systems can be optimized for society as a whole, beyond the direct goals of AI developers.   
+## Nowcasting upgrade for better real-time estimation of GDP and inflation 
+Atmajitsinh Gohil describes a recently devised 3 step framework that improves the accuracy of nowcasting.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/posts/2024/06/11/images/shutterstock_2436413315.jpg)
+![](ideas/datasciencebites/posts/2024/6/25/images/GDPshutterstock_2302082265-991.jpg)
 :::
 :::
 
