new Journal announcement

--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!ai-series-7.qmd"
+    - "!RWDS-journal.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -71,7 +71,7 @@ listing:
     - /viewpoints
     - "!index.qmd"
     - "!editors-note.qmd"
-    - "!democratizing-data.qmd"
+    - "!RWDS-journal.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -133,15 +133,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/datasciencebites/posts/2024/6/25/nowcasting-3step.qmd">
+<a href="/viewpoints/posts/2024/08/01/RWDS-journal.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Nowcasting upgrade for better real-time estimation of GDP and inflation 
-Atmajitsinh Gohil describes a recently devised 3 step framework that improves the accuracy of nowcasting.   
+## New open access journal - *RSS: Data Science and Artificial Intelligence* 
+The Royal Statistical Society is launching its new fully open access journal, *RSS: Data Science and Artificial Intelligence* with a remit to publish research on statistics, machine learning, deep learning, econometrics, bioinformatics, engineering and computational social science.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/datasciencebites/posts/2024/6/25/images/GDPshutterstock_2302082265-991.jpg)
+![](viewpoints/posts/2024/08/01/images/RSS-DS-AI-cover.jpg)
 :::
 :::
 
