--- a/case-studies/posts/2024/05/08/dpm.qmd
+++ b/case-studies/posts/2024/05/08/dpm.qmd
@@ -3,7 +3,7 @@ title: Forecasting the Health Needs of a Changing Population
 description: |
   Taking NHS usage of the 1 million people in and around Bristol, then combining with population forecasts into a modelling framework has created a sophisticated but interprettable 20-year forecast for use by healthcare leaders.
 categories:
-  - Health and Wellbeing
+  - Health and wellbeing
   - Forecasting
 author: Luke Shaw (BNSSG ICB), Rich Wood (BNSSG ICB, University of Bath), Christos Vasilakis (University of Bath), Zehra Onen Dumlu (University of Bath)
 date: last-modified
