article posted in visual studio
A feature ideas article has been added to the branch using visual studio

--- a/index.qmd
+++ b/index.qmd
@@ -43,7 +43,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
-    - "!ai-series-7.qmd"
+    - "!digital-gender-gap.qmd"
     sort: "date desc"
     type: grid
     categories: false
