--- a/index.qmd
+++ b/index.qmd
@@ -133,15 +133,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/posts/2024/08/01/RWDS-journal.qmd">
+<a href="/ideas/posts/2024/09/17/digital-gender-gap.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## New open access journal - *RSS: Data Science and Artificial Intelligence* 
-The Royal Statistical Society is launching its new fully open access journal, *RSS: Data Science and Artificial Intelligence* with a remit to publish research on statistics, machine learning, deep learning, econometrics, bioinformatics, engineering and computational social science.   
+## Are we at risk of muting the female voice in the digital world? 
+Anna Demming reports on recent insights into the interplay between gender disparities on and offline and what might help to close the gap.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/posts/2024/08/01/images/RSS-DS-AI-cover.jpg)
+![](ideas/posts/2024/09/17/images/Minoan-Illustration-991.jpg)
 :::
 :::
 
