--- a/ideas/posts/2024/09/17/digital-gender-gap.qmd
+++ b/ideas/posts/2024/09/17/digital-gender-gap.qmd
@@ -62,14 +62,14 @@ EPJ Data Science **10** 39 (2021) [https://doi.org/10.1140/epjds/s13688-021-0029
 'One argument is that that's often because they don't have advantageous networks,' says Kashyap, adding that women may be restricted by the need to resume care commitments at home instead of staying for drinks after work or travelling to attend conferences. One might expect online avenues for networking would be able to mitigate such obstacles. In fact, studies of LinkedIn data did suggest that although women are less likely to be in professional and technical occupations as reflected in the platform’s data, in some instances their numbers exceeded them. Kashyap suggests this could be 'where they're using online platforms to make themselves more visible, because other fine forms of networking are less available, or they have less time for it.' Indeed, women who were on LinkedIn were more likely to report a promotion than their male counterparts, suggesting an element of positive selection among the female LinkedIn user population. However, the potential equalising impact of moving professional networking online seems to have its limits. 
 
 Their study of LinkedIn data showed women were less likely to report a relocation for work, which Kashyap suggests, 'is a sign that the work family trade-off is probably still remaining acute for this highly selected group.' In another 2023 study Kashyap and colleagues had also reported a lower mobility for women, specifically among published scientists, researchers and academics based on bibliometric data from over 33 million Scopus publications^[Zhao X , Akbaritabar A, Kashyap R & Zagheni E A gender perspective on the global migration of scholars *PNAS* **120** e2214664120
-[https://doi.org/10.1073/pnas.2214664120](https://www.pnas.org/doi/10.1073/pnas.2214664120)]. In addition, when Kashyap and her colleagues looked at women on LinkedIn working in the tech sector, they found that they had a lower chance of being connected to those working in one of the “big five” firms in the tech sector than men, when not working in one themselves. 'One way to interpret that is to say that they have maybe less influential online social networks, right, even when they are on the platform.''
+[https://doi.org/10.1073/pnas.2214664120](https://www.pnas.org/doi/10.1073/pnas.2214664120)]. In addition, when Kashyap and her colleagues looked at women on LinkedIn working in the tech sector, they found that they had a lower chance of being connected to those working in one of the “big five” firms in the tech sector than men, when not working in one themselves. 'One way to interpret that is to say that they have maybe less influential online social networks, right, even when they are on the platform.'
+
+![Leaky pipeline. The proportion of women working in science decreases towards the mid and senior career stages.](images/shutterstock_1215562669-h350.jpg){#fig-4 fig-align="center" fig-alt="Leaky pipeline. The proportion of women working in science decreases towards the mid and senior career stages"}
 
 Kashyap suggests several reasons why women may have less influential networks online. For one, online networks are still likely to be influenced by the scenarios playing out offline, since referrals on these networks are based on the people you already know. The difference may also be based on the types of companies women tend to work in and the positions they hold. For instance, women are more likely to work in IT service support than programming-intensive occupations, and here once again Kashyap suggests the work family trade off plays a role in women seeking less intensive or more flexible jobs. She highlights that girls equal or exceed the achievement of male counterparts through school and continue to match them in their early careers before their numbers start to drop off dramatically. 'I think now there's a growing recognition that this is actually a real conflict, the work family conflict,' she tells Real World Data Science. Today’s young women are socialised to have 'high achieving aspirations', which can be hard to reconcile with 'regressive norms' for women to shoulder the bulk of caring responsibilities, particularly when starting a family. 
 
 ## Real world gender disparities in career development
 Neuroscientist Joanne Kenney has also been following data on the gender gap in the science and tech sectors and co-authored 'A Snapshot of Female Representation in Twelve Academic Psychiatry Institutions Around the World'^[Kenney J, Ochoa S, Alnor M A, Ben-Azu B, Diaz-Cutraro L, Folarin R, Hutch A, Luckhoff H K, Prokopez C R, Rychagov N, Surajudeen B, Walsh L, Watts T, Del Re E C A Snapshot of Female Representation in Twelve Academic Psychiatry Institutions Around the World *Psychiatry Research* (2021) [doi: 10.1016/j.psychres.2021.114358](https://pubmed.ncbi.nlm.nih.gov/34986430/)] with Assistant Professor of Psychiatry at Harvard Medical School Elisabetta del Re. The figures published here also show that globally women represent a large majority of early career scientists, but their numbers steadily decrease towards the mid and senior career stages so that there is a negative correlation between career stages and female presence in science, often referred to as the ‘leaky pipeline’ or ‘sticky floor’.  'You don't always hear their stories or the reasons why they've left,' says Kenney who highlights that in her experience in academia exit interviews are rare. Just 24% of the UK total workforce in the tech sector are women, while black women account for only 0.7% of IT professionals according to the 2024 UN Women UK and Kearney Consulting report ['Gap to Gateway: diversity in tech as the key to the future'](https://www.kearney.com/about/diversity-equity-and-inclusion/gap-to-gateway) for which Kenney was an external collaborator. Kenney is currently working on another project with a team of scientists from Europe, Africa, and North and South America led by del Re to gather stories from women and other underrepresented groups in academic institutions around the world through focus groups aimed at better understanding their experiences of working in science.
-
-![Leaky pipeline. The proportion of women working in science decreases towards the mid and senior career stages.](images/shutterstock_1215562669.jpg){#fig-4 fig-align="center" fig-alt="Leaky pipeline. The proportion of women working in science decreases towards the mid and senior career stages"}
 
 For those who stick at it, the career path appears to be a steeper hike for women than their male counterparts. There is a citation-bias favouring male-authored articles^[Dworkin J D, Linn K A, Teich E G, Zurn P, Shinohara R T & Bassett D S The extent and drivers of gender imbalance in neuroscience reference lists *Nature* **23** 918-926 (2020) [https://www.nature.com/articles/s41593-020-0658-y](https://www.nature.com/articles/s41593-020-0658-y)]. Women also take on average nine years to transition to senior author whereas men take five^[Bearden C E Accelerating the Bending Arc Toward Equality: A Commentary on Gender Trends in Authorship in Psychiatry Journals *Biological Psychiatry* **86** 575-576 (2019)[https://www.biologicalpsychiatryjournal.com/article/S0006-3223(19)31588-4/abstract](https://www.biologicalpsychiatryjournal.com/article/S0006-3223(19)31588-4/abstract)], and women are less likely to be promoted to leadership positions^[Clark J & Horton R A coming of age for gender in global health *The Lancet* **393** p2367-2369 (2019) [https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(19)30986-9/abstract](https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(19)30986-9/abstract)]. While women in science bear a measurably unequal career impact on entering parenthood^[Morgan A C, Way S F, Hoefer M J D, Larremore D B, Galesic M & Clauset A The unequal impact of parenthood in academia *Science Advnaces* **7** eabd1996 [doi: 10.1126/sciadv.abd1996](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7904257/)], some of these inequalities may also stem from sexism, which can range from fewer opportunities for mentorship and collaboration to outright harassment^[O'Connor P s gendered power irrelevant in higher educational institutions? Understanding the persistence of gender inequality *Interdisciplinary Science Reviews" **48** 669-686 (2023) [https://doi.org/10.1080/03080188.2023.2253667](https://www.tandfonline.com/doi/full/10.1080/03080188.2023.2253667#d1e144)].
 
