images removed index updated
I have deleted the images with the watermarks and updated the index page soo the journal article shows under latest news

--- a/ideas/posts/2024/09/17/digital-gender-gap.qmd
+++ b/ideas/posts/2024/09/17/digital-gender-gap.qmd
@@ -9,7 +9,7 @@ categories:
 author: Anna Demming
 date: 09/17/2024
 toc: true
-image: images/muted.png
+image: images/Minoan-Illustration-991.jpg
 image-alt: Muted. In the absence of proactive intervention, the shift of debate and discourse online risks muting women and girls as multiple factors exclude them from engaging there as productively as male counterparts. Copyright Park Kang Hun/Shutterstock.
 language: 
     section-title-footnotes: References
