--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!RWDS-journal.qmd"
+    - "!digital-gender-gap.qmd"
     sort: "date desc"
     type: grid
     categories: false
