--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!digital-gender-gap.qmd"
+    - "!machine-learning-nobel-prizes.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -133,15 +133,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/posts/2024/09/17/digital-gender-gap.qmd">
+<a href="/ideas/posts/2024/10/31/machine-learning-nobel-prizes.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Are we at risk of muting the female voice in the digital world? 
-Anna Demming reports on recent insights into the interplay between gender disparities on and offline and what might help to close the gap.   
+## The machine learning victories at the 2024 Nobel Prize Awards and how to explain them 
+Machine learning using apparently different architectures bagged the 2024 Nobel Prizes for Physics and Chemistry. Anna Demming reports on what the prizes were awarded for and how finding connections between the two approaches to machine learning may help towards explaining how "black box" algorithms reach their conclusions.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/posts/2024/09/17/images/Minoan-Illustration-991.jpg)
+![](ideas/posts/2024/10/31/images/Nobelpic-shutterstock-991.png)
 :::
 :::
 
