--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,8 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!machine-learning-nobel-prizes.qmd"
+    - "!policy-problem.qmd"
+    - "!dpm.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -133,15 +134,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/posts/2024/10/31/machine-learning-nobel-prizes.qmd">
+<a href="/case-studies/posts/2024/11/01/policy-problem.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## The machine learning victories at the 2024 Nobel Prize Awards and how to explain them 
-Machine learning using apparently different architectures bagged the 2024 Nobel Prizes for Physics and Chemistry. Anna Demming reports on what the prizes were awarded for and how finding connections between the two approaches to machine learning may help towards explaining how "black box" algorithms reach their conclusions.   
+## Advancing Data Science in Official Statistics – The Policy Problem 
+In this article, we introduce a new approach for the US Census Bureau to produce statistical products using survey, administrative, procedural and opportunity data. This is the first in a series of four articles describing the development of the Curated Data Enterprise Framework.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/posts/2024/10/31/images/Nobelpic-shutterstock-991.png)
+![](case-studies/posts/2024/11/01/images/laptop-thumbnail.jpg)
 :::
 :::
 
