--- a/case-studies/posts/2024/05/08/dpm.qmd
+++ b/case-studies/posts/2024/05/08/dpm.qmd
@@ -6,7 +6,7 @@ categories:
   - Health and wellbeing
   - Forecasting
 author: Luke Shaw (BNSSG ICB), Rich Wood (BNSSG ICB, University of Bath), Christos Vasilakis (University of Bath), Zehra Onen Dumlu (University of Bath)
-date: last-modified
+date: 05/08/2024
 toc: true
 image: images/doctor-patient-thumbnail.png
 image-alt: A doctor takes a blood pressure reading from a patient.
