--- a/case-studies/posts/2024/11/01/policy-problem.qmd
+++ b/case-studies/posts/2024/11/01/policy-problem.qmd
@@ -2,7 +2,7 @@
 title: Advancing Data Science in Official Statistics – The Policy Problem
 description: |
   In this article, we introduce a new approach for the US Census Bureau to produce statistical products using survey, administrative, procedural and opportunity data. This is the first in a series of four articles describing the development of the Curated Data Enterprise Framework. 
-author: Sallie Keller, Stephanie Shipp, Vicki Lancaster and Joseph Salvo (University of Virginia)
+author: Sallie Keller, Stephanie Shipp, Vicki Lancaster and Joseph Salvo <br /> University of Virginia
 date: 11/01/2024
 image: images/laptop-thumbnail.jpg
 image-alt: A laptop computer showing a variety of data visualisations.
@@ -63,14 +63,24 @@ The next three articles in this series will:
 -   describe our next steps for developing the CDE through a use case research program.
 
 
+::: nav-btn-container
+::: grid
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
+[Part 2: What is the Curated Data Enterprise? &rarr;](/case-studies/posts/2024/11/08/what-is-CDE.qmd)
+:::
+:::
+:::
+:::
+
 ::: further-info
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the authors
 
+: **Sallie Keller** is the Chief Scientist and Associate Director of Research and Methodology at the US Census Bureau. She is a statistician with research interest in social and decision informatics, statistics underpinnings of data science, and data access and confidentiality. Sallie Keller was at the University of Virginia when this work was conducted.
 : **Stephanie Shipp** leads the Curated Data Enterprise research portfolio and collaborates with the US Census. She is an economist with experience in data science, survey statistics, public policy, innovation, ethics, and evaluation.
 : **Vicki Lancaster** is a statistician with expertise in experimental design, linear models, computation, visualizations, data analysis, and interpretation. She works with scientists at federal agencies on projects requiring statistical skills and creativity, eg, defining skilled technical workforce using novel data sources.
-: **Sallie Keller** is the Chief Scientist and Associate Director of Research and Methodology at the US Census Bureau. She is a statistician with research interest in social and decision informatics, statistics underpinnings of data science, and data access and confidentiality. Sallie Keller was at the University of Virginia when this work was conducted. She is now the Chief Scientist and Associate Director of Research and Methodology at the US Census Bureau.
 : **Joseph Salvo** is a demographer with experience in US Census Bureau statistics and data. He makes presentations on demographic subjects to a wide range of groups about managing major demographic projects involving the analysis of large data sets for local applications.
 
 ::: 
@@ -83,7 +93,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Shipp S, Lancaster V, Keller S, Salvo J (2024). "Advancing Data Science in Official Statistics: The Policy Problem." Real World Data Science, September 20, 2024. [URL](https://realworlddatascience.net/case-studies/posts/2024/11/01/policy-problem.html)
+: Keller S, Shipp S, Lancaster V, Salvo J (2024). "Advancing Data Science in Official Statistics: The Policy Problem." Real World Data Science, November 01, 2024. [URL](https://realworlddatascience.net/case-studies/posts/2024/11/01/policy-problem.html)
 :::
 :::
 :::
