--- a/index.qmd
+++ b/index.qmd
@@ -17,8 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!policy-problem.qmd"
-    - "!dpm.qmd"
+    - "!what-is-CDE.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -31,6 +30,8 @@ listing:
     contents: 
     - /case-studies
     - "!index.qmd"
+    - "!policy-problem.qmd"
+    - "!what-is-CDE.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,7 +44,7 @@ listing:
     contents: 
     - /ideas
     - "!index.qmd"
-    - "!dsb-live.qmd"
+    - "!machine-learning-nobel-prizes.qmd"
     - "!digital-gender-gap.qmd"
     sort: "date desc"
     type: grid
@@ -57,8 +58,6 @@ listing:
     contents: 
     - /careers
     - "!index.qmd"
-    - "!mjones-interview.qmd"
-    - "!pholborn-interview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -134,15 +133,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2024/11/01/policy-problem.qmd">
+<a href="/case-studies/posts/2024/11/08/what-is-CDE.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Advancing Data Science in Official Statistics – The Policy Problem 
-In this article, we introduce a new approach for the US Census Bureau to produce statistical products using survey, administrative, procedural and opportunity data. This is the first in a series of four articles describing the development of the Curated Data Enterprise Framework.   
+## Advancing Data Science in Official Statistics – What is the Curated Data Enterprise?
+The US Census Bureau faces the challenge of addressing complex questions requiring novel datasets and sources to answer. Official statistical agencies and public- and private-sector organizations worldwide share this challenge. Read on to discover how the Curated Data Enterprise approach might help you address your own research challenges.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2024/11/01/images/laptop-thumbnail.jpg)
+![](case-studies/posts/2024/11/08/images/screen.thumbnail.jpg)
 :::
 :::
 
