--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!what-is-CDE.qmd"
+    - "!use-case-2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -30,8 +30,9 @@ listing:
     contents: 
     - /case-studies
     - "!index.qmd"
+    - "!what-is-CDE-2.qmd"
     - "!policy-problem.qmd"
-    - "!what-is-CDE.qmd"
+    - "!use-case-2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -133,15 +134,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2024/11/08/what-is-CDE.qmd">
+<a href="/case-studies/posts/2024/11/19/use-case-2.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Advancing Data Science in Official Statistics – What is the Curated Data Enterprise?
-The US Census Bureau faces the challenge of addressing complex questions requiring novel datasets and sources to answer. Official statistical agencies and public- and private-sector organizations worldwide share this challenge. Read on to discover how the Curated Data Enterprise approach might help you address your own research challenges.  
+## Translating the Curated Data Model into Practice - Climate resiliency of skilled nursing facilities
+How does the Curated Data Enterprise Framework  work? Take a look at our demonstration use case on the resilience of skilled nursing facilities.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2024/11/08/images/screen.thumbnail.jpg)
+![](case-studies/posts/2024/11/19/images/nurse-thumbnail.jpg)
 :::
 :::
 
