Ship Lancaster final article

--- a/case-studies/posts/2024/11/19/use-case-2.qmd
+++ b/case-studies/posts/2024/11/19/use-case-2.qmd
@@ -254,6 +254,13 @@ Conducting this use case has been an eye-opening experience as to the amount and
 [&larr; Part 2: What is the CDE?](/case-studies/posts/2024/11/08/what-is-CDE-2.qmd)
 :::
 :::
+
+
+::: {.g-col-12 .g-col-sm-6}
+::: nav-btn
+[Part 4: Census Curated Data Enterprise Environment &rarr;](/case-studies/posts/2024/11/22/development-plan-2.qmd)
+:::
+:::
 :::
 :::
 
