--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!use-case-2.qmd"
+    - "!development-plan-2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -33,6 +33,7 @@ listing:
     - "!what-is-CDE-2.qmd"
     - "!policy-problem.qmd"
     - "!use-case-2.qmd"
+    - "!development-plan-2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -134,15 +135,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2024/11/19/use-case-2.qmd">
+<a href="/case-studies/posts/2024/11/22/development-plan-2.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Translating the Curated Data Model into Practice - Climate resiliency of skilled nursing facilities
-How does the Curated Data Enterprise Framework  work? Take a look at our demonstration use case on the resilience of skilled nursing facilities.  
+## Defining Purposes and Uses to Support the Development of Statistical Products in a 21^st^ Century Census Curated Data Enterprise Environment
+Learn about researchers’ plans to develop the Curated Data Enterprise through a use case research program.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2024/11/19/images/nurse-thumbnail.jpg)
+![](case-studies/posts/2024/11/22/images/figure-1.png)
 :::
 :::
 
