--- a/ideas/datasciencebites/posts/2025/02/05/DSAI-journal.qmd
+++ b/ideas/datasciencebites/posts/2025/02/05/DSAI-journal.qmd
@@ -16,7 +16,7 @@ image-alt: An image of the cover of the RSS Data Science and Artificial Intellig
 ![](images/RSS-DSAI-Logo-blue.png){fig-alt="RSS Data Science and AI logo" width="80%"}
 \
 
-*RSS: Data Science and Artificial Intelligence* provides a new forum for research of interest to a broad readership spanning the data science fields. Created in recognition of the growing importance of data science and artificial intelligence in science and society, the new journal aims to fill the need for a venue that truly spans the relevant fields. 
+*RSS: Data Science and Artificial Intelligence* provides a new forum for research of interest to a broad readership, spanning the data science fields. Created in recognition of the growing importance of data science and artificial intelligence in science and society, the new journal aims to fill the need for a venue that truly spans the relevant fields. 
 
 
 ::: {.img-float}
