--- a/ideas/datasciencebites/posts/2025/02/05/DSAI-journal.qmd
+++ b/ideas/datasciencebites/posts/2025/02/05/DSAI-journal.qmd
@@ -27,7 +27,7 @@ This new open access journal joins the RSS family of world class statistics jour
 
 ## Scope and type of papers
 
-*RSS: Data Science and Artificial Intelligence* is seeking high quality papers from across the breadth of these disciplines which encompass statistics, machine learning, deep learning, econometrics, bioinformatics, engineering, computational social sciences, and beyond. 
+*RSS: Data Science and Artificial Intelligence* is seeking high quality papers from across the breadth of these disciplines which encompass statistics, machine learning, deep learning, econometrics, bioinformatics, engineering, computational social sciences and beyond. 
 
 As well as three primary paper types - method papers, applications papers and behind-the-scenes papers - *RSS: Data Science and Artificial Intelligence* will publish editorials, op-eds, interviews, and reviews/perspectives in line with its goal to become a primary destination for data scientists
 
